removed the text for notifications, only icon left as a feature

--- a/WebpageTest/mysite/intellishop/templates/intellishop/index_home_original.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/index_home_original.html
@@ -148,11 +148,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link position-relative" href="#" id="notifications-link" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Sign in to view your notifications">
+                        <a class="nav-link position-relative" href="#" id="notifications-link">
                             <i class="bi bi-bell"></i>
-                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success">
-                                1
-                            </span>
                         </a>
                     </li>
                     <li class="nav-item dropdown">
