Removed Most Popular section

--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -16,7 +16,7 @@
         </button>
     </div>
 
-    <!-- Filter Sections -->
+    {% comment %} <!-- Filter Sections -->
     <div class="filter-sections">
         <!-- Most Popular Section -->
         <div class="filter-section">
@@ -29,7 +29,7 @@
                 <div class="filter-item placeholder"></div>
                 <div class="filter-item placeholder"></div>
             </div>
-        </div>
+        </div> {% endcomment %}
 
         <!-- Price Range by fixed amount Section -->
         <div class="filter-section">
