--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -16,9 +16,9 @@
         </button>
     </div>
 
-    {% comment %} <!-- Filter Sections -->
+    <!-- Filter Sections -->
     <div class="filter-sections">
-        <!-- Most Popular Section -->
+        {% comment %} <!-- Most Popular Section -->
         <div class="filter-section">
             <div class="section-header">
                 <h3>Most Popular</h3>
